--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.12.1",
+    "react-slideshow-image": "^4.2.1",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.12"
+    "sweetalert2": "^11.7.12",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
