--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "firebase": "^9.22.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-id-swiper": "^4.0.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.12.1",
     "react-slideshow-image": "^4.2.1",
     "react-spinners": "^0.13.8",
