replace localhost with vercel server

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "summer-camp-school-client",
+  "name": "speak-ease-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
